output example and TeX fix in HTML

--- a/dexy.yaml
+++ b/dexy.yaml
@@ -1,15 +1,12 @@
-java:
-  - .java|idio|l
-
 # HTML output
 .md|jinja|markdown|easyhtml:
-  - java
+  - .java|idio
   - .jpg
 
 # PDF output - requires a latex compiler on your system
 .md|jinja|pandoc|hd|ft|latex:
   - headers
   - pandoc: { ext: .tex }
-  - java
+  - .java|idio|l
   - .jpg
   - .tex|jinja
